2001-12-05  Fredrik <fredrik@krixor.xy.org>

	* usb.h:
	  Added EOS D30 (and possibly other models) commands to
	  lock and unlock camera keys.

	* usb.c, usb.h:
	  Renamed canon_usb_keylock() to canon_usb_lock_keys().
	  Added canon_usb_unlock_keys(), the only camera known to
	  support this is the EOS D30. This is called from
	  camera_exit().
	  Corrected comments about how canon_usb_dialogue() works.

	* canon.c: Improved error checking on return from
	  canon_{usb,serial}_dialogue() calls and changed some
	  functions to return GP_ codes instead of hard coded
	  integer values.

	* library.c:
	  Call canon_usb_unlock_keys() from camera_exit() if
	  using USB.

2001-12-04  Fredrik <fredrik@krixor.xy.org>
	
	* canon.c: Improved debug output in canon_int_get_time().

	* canon.c, canon.h, serial.c, serial.h, usb.c, usb.h:
	  Moved canon_int_serial_ready() to serial.c and renamed
	  it to canon_serial_ready().
	  Moved canon_int_usb_ready() to usb.c and renamed
	  it to canon_usb_ready().

	* library.c: Don't say we are switching off camera if
	  USB, since we are not.

	* usb.c: Make canon_usb_keylock() not try to keylock
	  EOS D30 cameras, they seem to do keylocking different.

2001-12-01  Fredrik <fredrik@krixor.xy.org>

	* usb.c, usb.h:
	  Added canon_usb_get_dirents().

	* serial.c, serial.h:
	  Added canon_serial_get_dirents().

	* canon.h: added CANON_MINIMUM_DIRENT_SIZE.

	* canon.c, canon.h:
	  Exchanged canon_int_list_directorys() with my
	  rewritten version. At least some hypothetical bugs
	  fixed, easier to understand and proper error-checking.
	  This should hopefully not break serial, since this is
	  almost the same code as I used when debugging other
	  serial stuff on Philippes computer/camera from 1600
	  km distance a few weeks ago.

	* library.c:
	  Re-wrote _get_file_path() since it was really hard to
	  understand. The first time I tried to understand it I
	  got it all wrong and even added some faulty comments.
